--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": "git+https://github.com/Danatey/goit-js-hw-10-food-service.git"
   },
   "keywords": [],
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "author": "Danil Prokhorchuk <danatey40793@gmail.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Danatey/goit-js-hw-10-food-service/issues"
