--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "homepage": "https://danatey.github.io/goit-js-hw-10-food-service/",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /goit-js-hw-10-food-service/"
+    "build": "parcel build src/*.html --public-url /goit-js-hw-10-food-service/",
+    "deploy": "node --version"
   },
   "repository": {
     "type": "git",
