--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /goit-js-hw-10-food-service/",
-    "deploy": "node --version"
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
