--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "parcel-project-template",
+  "name": "goit-js-hw-10-food-service",
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
@@ -17,7 +17,7 @@
   "author": "Danil Prokhorchuk <danatey40793@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Danatey/goit-js-hw-10-food-service/issues"
+    "url": "https://github.com/Danatey/goit-js-hw-10-food-service"
   },
   "devDependencies": {
     "gh-pages": "^3.1.0",
